--- a/app/src/main/res/layout/activity_selling.xml
+++ b/app/src/main/res/layout/activity_selling.xml
@@ -1,27 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_selling"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/include_toolbar"
-        android:layout_width="0dp"
+    <ImageButton
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="end|center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:contentDescription="@string/bottomnav_search"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:padding="8dp"
+        android:src="@drawable/ic_back_24dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView12"
+        style="@style/Black_Bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="매수"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/button_back"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+    <ImageButton
+        android:id="@+id/button_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@null"
+        android:contentDescription="@string/bottomnav_search"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:padding="8dp"
+        android:src="@drawable/ic_hint_off_24_dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_layout_part"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/frame_layout_max"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/text_view_recent"
@@ -29,6 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:text="@string/recent"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_recent_money"
@@ -58,18 +98,22 @@
             app:layout_constraintStart_toEndOf="@+id/text_view_recent_money"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_view_two_stock"
+        <EditText
+            android:id="@+id/edit_text_input_stock"
             style="@style/Black_Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/two_stock"
+            android:background="@null"
+            android:hint="0"
+            android:inputType="number"
+            android:maxLength="4"
             android:textSize="36sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_stock_unit"
             app:layout_constraintEnd_toStartOf="@+id/text_view_stock_unit"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_recent_money" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_recent" />
 
 
         <TextView
@@ -81,7 +125,7 @@
             android:text="@string/stock_unit"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_view_two_stock"
+            app:layout_constraintStart_toEndOf="@+id/edit_text_input_stock"
             app:layout_constraintTop_toBottomOf="@+id/text_view_recent_money" />
 
         <TextView
@@ -89,38 +133,35 @@
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
             android:text="@string/total"
             android:textSize="14sp"
-            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_total_money"
             app:layout_constraintEnd_toStartOf="@+id/text_view_total_money"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_view_total_money"
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/total_money"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_money_unit2"
             app:layout_constraintEnd_toStartOf="@+id/text_view_left_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_total"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_total" />
 
         <TextView
             android:id="@+id/text_view_money_unit2"
             style="@style/Black_Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/money_unit"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_left_parentheses"
             app:layout_constraintEnd_toStartOf="@+id/text_view_left_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_total_money"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_total_money" />
 
 
         <TextView
@@ -128,26 +169,24 @@
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/left_parentheses"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_result_money"
             app:layout_constraintEnd_toStartOf="@+id/text_view_result_money"
-            app:layout_constraintStart_toEndOf="@+id/text_view_money_unit2"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_money_unit2" />
 
         <TextView
             android:id="@+id/text_view_result_money"
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/result_money"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_right_parentheses"
             app:layout_constraintEnd_toStartOf="@+id/text_view_right_parentheses"
-            app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses" />
 
         <TextView
             android:id="@+id/text_view_right_parentheses"
@@ -160,7 +199,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_view_result_money"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_stock" />
 
         <TextView
             android:id="@+id/text_view_left_parentheses2"
@@ -171,13 +210,13 @@
             android:text="@string/left_parentheses"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_view_selling_money"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_rest_stock"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />
 
         <TextView
-            android:id="@+id/text_view_selling_money"
+            android:id="@+id/text_view_rest_stock"
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -202,7 +241,7 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/text_view_lack"
-            app:layout_constraintStart_toEndOf="@+id/text_view_selling_money"
+            app:layout_constraintStart_toEndOf="@+id/text_view_rest_stock"
             app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />
 
         <TextView
@@ -286,7 +325,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
                 android:textSize="20sp" />
@@ -299,7 +337,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
                 android:textSize="20sp" />
@@ -312,7 +349,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
                 android:textSize="20sp" />
@@ -328,7 +364,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
                 android:textSize="20sp" />
@@ -341,7 +376,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
                 android:textSize="20sp" />
@@ -354,7 +388,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
                 android:textSize="20sp" />
@@ -370,7 +403,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
                 android:textSize="20sp" />
@@ -383,7 +415,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
                 android:textSize="20sp" />
@@ -396,7 +427,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
                 android:textSize="20sp" />
@@ -412,8 +442,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:paddingTop="16dp"
-                android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
                 android:textSize="14sp" />
@@ -426,13 +454,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
                 android:textSize="20sp" />
 
             <ImageButton
-                android:id="@+id/button_back"
+                android:id="@+id/button_backspace"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -440,10 +467,10 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:paddingStart="32dp"
-                android:paddingTop="20dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="32dp"
-                android:paddingBottom="18dp"
-                android:contentDescription="@string/EmptyImage"
+                android:paddingBottom="10dp"
+                android:contentDescription="뒤로가기"
                 android:src="@drawable/ic_backspace_24_dp"
                 android:stateListAnimator="@null" />
         </TableRow>
