feat(onboarding): 온보딩 화면3, 4 XML 수정(png 파일 포함)

--- a/app/src/main/res/layout/fragment_on_boarding4.xml
+++ b/app/src/main/res/layout/fragment_on_boarding4.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="">
 
     <ImageView
         android:id="@+id/iv2"
@@ -12,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_tutorial_last" />
+        app:srcCompat="" />
 
 
     <TextView
