--- a/app/src/main/res/layout/fragment_on_boarding4.xml
+++ b/app/src/main/res/layout/fragment_on_boarding4.xml
@@ -57,7 +57,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="시작하기"
-        android:textStyle="bold"
+        style="@style/Bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
