--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -4,6 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_onboarding_ovalwrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        >
+        <View
+            android:id="@+id/view_onboarding_oval1"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval2"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval1"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval3"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/dusty_orange"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval2"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval4"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval3"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/txtview_onboarding2_1_1"
