--- a/app/src/main/res/layout/fragment_on_boarding4.xml
+++ b/app/src/main/res/layout/fragment_on_boarding4.xml
@@ -4,14 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_onboarding_ovalwrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        >
+        <View
+            android:id="@+id/view_onboarding_oval1"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval2"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval1"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval3"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/grey_300"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval2"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+        <View
+            android:id="@+id/view_onboarding_oval4"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:backgroundTint="@color/dusty_orange"
+            android:background="@drawable/bg_oval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval3"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
+        android:layout_marginTop="8dp"
         android:id="@+id/iv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_onboarding_ovalwrapper"
         app:srcCompat="@drawable/ic_tutorial_last" />
 
 
@@ -20,7 +80,7 @@
         style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="460dp"
         android:text="주식과 재미를,"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="시작하기"
         style="@style/Bold"
         android:textSize="20sp"
