--- a/app/src/main/res/layout/dialog_utill_buying.xml
+++ b/app/src/main/res/layout/dialog_utill_buying.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:text="@string/two_stock"
+            android:text="20"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_stock_unit"
             app:layout_constraintStart_toEndOf="@+id/text_view_stock_name"
@@ -85,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/total_money"
+            android:text="900000"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_money_unit"
             app:layout_constraintStart_toEndOf="@+id/text_view_total"
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/result_money"
+                android:text="9100000원 남음"
                 android:textColor="@color/pastel_red"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/text_view_right_parentheses"
